--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,11 @@ edition = "2018"
 [dependencies]
 html5ever = "*"
 markup5ever_rcdom = "*"
+
+[dependencies.gtk]
+version = "0.9.0"
+features = ["v3_16"]
+
+[dependencies.gio]
+version = ""
+features = ["v2_44"]
